# ara-exce

./: AraCom_Skeleton.h  AraExcev.h  AraExec.h  CMakeLists.txt  ExecManager.h  SomeipBinding.h  client.cpp  manifest.json  server.cpp  vsomeip.json
